--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 
 .container {
     display: flex;
+    margin-bottom: 24px;
 }
 
 .container-left {
@@ -30,7 +31,7 @@ body {
 
 .name {
     font-size: 3rem;
-    margin-top: 10px;
+
     text-transform: uppercase;
 }
 
@@ -45,7 +46,7 @@ body {
 .work-experience {
     display: flex;
     flex-direction: column;
-    margin-top: 24px;
+
 }
 
 .work-title,
@@ -69,7 +70,7 @@ h3 {
 
 .skills {
     display: flex;
-    margin: 24px 0;
+
 }
 
 .prof-skills,
@@ -87,16 +88,17 @@ h3 {
 
 .container-right {
     flex: 1;
+    padding-left: 34px;
 }
 
 .about-wrapper {
     align-items: center;
     display: flex;
     justify-content: flex-end;
-    margin-right: 34px;
+
 }
 
-.resume-img {
+.resume-img-right {
     border-radius: 50%;
     height: 160px;
     object-fit: cover;
@@ -111,20 +113,101 @@ h3 {
     text-decoration: underline;
 }
 
-
-
-
-
-
-
-
-
+.kodego-proj li {
+    list-style: none;
+}
 
 .footer {
     background: rgb(252, 70, 107);
     background: linear-gradient(90deg, rgba(252, 70, 107, 1) 0%, rgba(63, 94, 251, 1) 100%);
     height: 40px;
-    margin-top: auto;
+
+}
+
+@media screen and (min-width: 120px) and (max-width: 720px) {
+    * {
+        box-sizing: border-box;
+        margin: 0;
+    }
+
+    body {
+        border-left: 0;
+    }
+
+    .wrapper {
+        height: 100vh;
+        width: 100%;
+    }
+
+    .container {
+        display: block;
+    }
+
+    .resume-img-left {
+        border-radius: 50%;
+        display: block;
+        height: 160px;
+        margin-left: 90px;
+        object-fit: cover;
+        width: 160px;
+    }
+
+    .resume-img-right {
+        display: none;
+    }
+
+    .title {
+        text-align: start;
+    }
+
+    .ws-li li {
+        width: 80%;
+    }
+
+    .skills {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .prof-skills,
+    .pers-skills {
+        margin-top: 24px;
+    }
+
+    /* .prof-skills-item,
+    .pers-skills-item {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+    } */
+
+    .about-wrapper {
+        display: block;
+        margin-top: 24px;
+    }
+
+    .contacts {
+        text-align: start;
+    }
+
+    .educ-bg-title {
+        margin-top: 24px;
+    }
+
+    .educ-item {
+        margin-top: 8px;
+    }
+
+    .kodego-proj {
+        margin-top: 4px;
+        width: 90%;
+    }
+}
+
+@media screen and (min-width: 720px) {
+    .resume-img-left {
+        display: none;
+    }
 }
 
 /* h2 {
@@ -133,8 +216,7 @@ h3 {
     padding-bottom: 10px;
     text-align: center;
     font-size: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
+
 }
 
 div.xp {
@@ -143,9 +225,7 @@ div.xp {
     float: left;
     border: 2px solid #BDCFDF;
     padding: 10px;
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-bottom: 10px;
+
 }
 
 div.personal_info {
@@ -154,9 +234,7 @@ div.personal_info {
     float: right;
     border: 2px solid #BDCFDF;
     padding: 10px;
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+
 }
 
 h3 {
