--- a/style.css
+++ b/style.css
@@ -70,12 +70,53 @@ h3 {
 
 .skills {
     display: flex;
-
+    margin: 10px 0;
 }
 
 .prof-skills,
 .pers-skills {
     flex: 1;
+}
+
+.prof-wrapper {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 18px;
+    margin: 10px 0px;
+    width: 88%;
+}
+
+.pers-wrapper {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+    margin: 10px 0px;
+    width: 100%;
+}
+
+.prof-skills-item,
+.pers-skills-item {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    justify-content: center;
+}
+
+.prof-img,
+.pers-img {
+    height: 70px;
+    width: 70px;
+}
+
+.pers-text {
+    align-items: center;
+    justify-content: center;
+    width: 88%;
+    text-align: center;
 }
 
 .fa {
@@ -121,7 +162,6 @@ h3 {
     background: rgb(252, 70, 107);
     background: linear-gradient(90deg, rgba(252, 70, 107, 1) 0%, rgba(63, 94, 251, 1) 100%);
     height: 40px;
-
 }
 
 @media screen and (min-width: 120px) and (max-width: 720px) {
@@ -177,6 +217,18 @@ h3 {
         margin-top: 24px;
     }
 
+    .prof-wrapper {
+        gap: 40px;
+        justify-content: center;
+    }
+
+    .pers-wrapper {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        gap: 20px;
+        width: 94%;
+    }
+
     /* .prof-skills-item,
     .pers-skills-item {
         align-items: center;
@@ -210,6 +262,20 @@ h3 {
 @media screen and (min-width: 720px) {
     .resume-img-left {
         display: none;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .wrapper {
+        height: 100vh;
+        position: relative;
+    }
+
+    .footer {
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        right: 0;
     }
 }
 
